saved config retrieved

--- a/config.html
+++ b/config.html
@@ -37,9 +37,23 @@
                     </div>
                 </div>
                 <div class="form-group form-md-line-input">
-                    <label class="col-sm-3 control-label configField">5 Digit USA ZIP Code</label>
+                    <label class="col-sm-3 control-label configField">City Name</label>
                     <div class="configInput">
-                        <input type="text" class="form-control" id ="zip" placeholder="">
+                        <input type="text" class="form-control" id ="city_name" placeholder="">
+                        <div class="form-control-focus"> </div>
+                    </div>
+                </div>
+                <div class="form-group form-md-line-input">
+                    <label class="col-sm-3 control-label configField">NYT API Key</label>
+                    <div class="configInput">
+                        <input type="text" class="form-control" id ="nyt_api_key" placeholder="">
+                        <div class="form-control-focus"> </div>
+                    </div>
+                </div>
+                <div class="form-group form-md-line-input">
+                    <label class="col-sm-3 control-label configField">OpenWeather API Key</label>
+                    <div class="configInput">
+                        <input type="text" class="form-control" id ="openweather_api_key" placeholder="">
                         <div class="form-control-focus"> </div>
                     </div>
                 </div>
