--- a/config.html
+++ b/config.html
@@ -29,7 +29,7 @@
 		<div class ="col-lg-9 form-body">
 			<div class="form-body">
                 <div class="form-group form-md-line-input">
-                    <h2>Name:</h2>
+                    <label class="col-sm-3 control-label configField">Name</label>
                     <!--<label class="col-sm-3 control-label configField">Name</label>-->
                     <div class="configInput">
                         <input type="text" class="form-control" placeholder="" id = "name">
