pwa manifest start

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     <!--Customizable script-->
 	<script type="text/javascript" src="js/script.js"></script>
+
+    <link rel="manifest" href="mirror.webmanifest">
    
     
 </head> 
