--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	
 	<link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/responsive.css">
     <!--Online Style Sheets-->
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -30,17 +31,17 @@
 <body>
 <div class = "containter-fluid">
 	<div class="row " id="main_row">
-		<div class ="col-lg-3">
-        <div class = "feedLabel">News Feed</div>
+		<div class ="col-lg-3 col-sm-3">
+            <div class = "feedLabel">News Feed</div>
 			<div class = "newsFeed"></div>
 		</div>
-		<div class = "col-lg-6">
+		<div class = "col-lg-6 col-sm-6">
 			<div class = "greeting">
 				<div class = "greetingText"></div> 
 			</div>
 		</div>
-        <div class = "feed"></div>
-		<div class = "col-lg-3">
+        <!-- <div class = "feed"></div> -->
+		<div class = "col-lg-3 col-sm-3">
 			<div class = "clock">	
 				<div class = "clock_display">
 					<div id = "date"></div>
